[package]
name = "bulletproofsplus"
version = "0.1.0"
authors = ["KyoohyungHan <satanigh89@gmail.com>"]
edition = "2018"

[dependencies]
sha3 = { version = "0.8", default-features = false }
digest = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand = { version = "0.7", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "2", default-features = false }
bitvec = "1"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2"
once_cell = "1.18.0"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.3"
bincode = "1"
